[headless] Swizzle NSPopUpButtonCell handling enevents and action messages to avoid pop-up menus appearing in Headless

Bug: 761065
Change-Id: If6c6743ce7cedf86fcf4eeb5094bf83b5cfabdca
Reviewed-on: https://chromium-review.googlesource.com/701935
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: David Vallet <dvallet@chromium.org>
Commit-Queue: David Vallet <dvallet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506883}
Former-commit-id: 1e260f54a4a0674cc41231480a9d4fd654c4538e